# freudagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
a2ui/: adapter.py  bridge.py  prompt.py  prompt_addendum.md  providers.py  pyproject.toml  queries.py  server.py
a2ui/client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
a2ui/client/src/: api.ts  app.ts  index.ts  theme.ts
a2ui/tests/: conftest.py  test_adapter.py  test_bridge.py  test_providers.py
data/: freud_schema.jsonl
docs/: tutorial-arxiv-extraction.md  tutorial-rlm-provider.md
skill/: skill.md
skill/reference/: archetype_patterns.md  translation_matrix.md
src/freud_schema/: __init__.py  archetypes.py  cli.py  dataset.py  db.py  harness.py  models.py  orchestrator.py  rlm.py  store.py  tables.py
tests/: conftest.py  test_experiment.py  test_rlm.py  test_schema.py
