[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freud-schema"
version = "0.1.0"
description = "Thematic data extraction of Sigmund Freud's writings into a standardized 8-column schema"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
freud-schema = "freud_schema.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
