[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freud-schema"
version = "0.6.0"
description = "Experiment harness for data-driven agent orchestration, grounded in Freudian archetypes"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "duckdb>=0.9.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
freud-schema = "freud_schema.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
