[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freud-schema"
version = "0.9.0"
description = "Experiment harness for data-driven agent orchestration, grounded in Freudian archetypes"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "duckdb>=0.9.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.30.0",
]
local = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0",
]

[project.scripts]
freud-schema = "freud_schema.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
